fix asset response + link update route (#12)
* fix api + new update route

* add expration date logic

* update swagger docs

* fix unit tests
